[tool.poetry]
name = "uhoo-homeassistant"
version = "0.0.4"
description = "uHoo integration for Home Assistant"
authors = ["Christopher Sacca <csacca@csacca.net>"]
repository = "https://github.com/csacca/uhoo-homeassistant"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyuhoo = {git = "https://github.com/wrouesnel/pyuhoo.git"}

[tool.poetry.dev-dependencies]
homeassistant = "^2023.5.2"
flake8 = "*"
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-homeassistant-custom-component = "*"
flake8-docstrings = "*"
pydocstyle = "*"

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["custom_components", "tests" , "homeassistant"]
forced_separate = "tests"
combine_as_imports = true

[tool.mypy]
pretty = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov custom_components.uhoo"
console_output_style = "count"
timeout = "9"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
